do the same analysis for the myh7 gene

--- a/Benchmark_gavin.ipynb
+++ b/Benchmark_gavin.ipynb
@@ -2,10 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -16,35 +14,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "datafolder = 'data/'\n",
+    "datafolder = 'data'\n",
     "gavin_res_file = 'gavin_res.csv'\n",
-    "anno_file = 'myo5b_variants_patho_benign_cadd1.3fullannot_v1.xlsx'"
+    "anno_file = 'dummy_no_nan_data.csv'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(248, 117)\n",
-      "(248, 31)\n"
+      "(850, 993)\n",
+      "(850, 31)\n"
      ]
     }
    ],
    "source": [
     "# read annotation\n",
-    "anno = pd.ExcelFile(os.path.join(datafolder,anno_file))\n",
-    "anno_table = anno.parse(anno.sheet_names[0])\n",
+    "anno_table = pd.read_csv(os.path.join(datafolder,anno_file),sep='\\t')\n",
     "print(anno_table.shape)\n",
     "# read gavin result\n",
     "gavin_res = pd.read_csv(os.path.join(datafolder,gavin_res_file),sep='\\t')\n",
@@ -53,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,17 +60,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "anno_table['gavin_res'] = anno_table['gavin_res'].replace('Benign',0)\n",
+    "anno_table['gavin_res'] = anno_table['gavin_res'].replace('Pathogenic',1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[ 93, 102],\n",
-       "       [  5,  48]])"
+       "array([[ 31, 225],\n",
+       "       [183, 411]])"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -86,10 +91,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "anno_table.to_csv('data/dummy_no_nan_data_with_gavinres.tsv',index=False,sep='\\t')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
@@ -110,7 +122,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
