--- a/examine_diff_CaddAnno_GavinVariantsRes.ipynb
+++ b/examine_diff_CaddAnno_GavinVariantsRes.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +161,7 @@
        "4      HIGH  35.00  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -172,7 +172,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['NUP107', 'IFT172', 'SPINT2', ..., 'PIKFYVE', 'BAX', 'HCN1'], dtype=object)"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gavin_anno['gene'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['ENSG00000176022', 'ENSG00000078808', nan, ..., 'ENSG00000185010',\n",
+       "       'ENSG00000203870', 'ENSG00000237859'], dtype=object)"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cadd_anno.GeneID.unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -370,7 +411,7 @@
        "[5 rows x 116 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -612,13 +653,158 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "cadd_anno['chr_pos_ref_alt'] = cadd_anno.apply(lambda row:'%s_%s_%s_%s'%\n",
+    "# add a column in cadd annotation table\n",
+    "cadd_anno['chr_pos_ref_alt_gene'] = cadd_anno.apply(lambda row:'%s_%s_%s_%s_%s'%\n",
     "                                               (row['#Chrom'],row['Pos'],\n",
-    "                                                row['Ref'],row['Alt']),axis=1)"
+    "                                                row['Ref'],row['Alt'],\n",
+    "                                                row['GeneName']),axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gavin_anno['chr_pos_ref_alt'] = gavin_anno.apply(lambda row:'%s_%s_%s_%s'%\n",
+    "                                               (row['chr'],row['pos'],\n",
+    "                                                row['ref'],row['alt']),axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cadd_anno['chr_pos'] = cadd_anno.apply(lambda row:'%s_%s'%\n",
+    "                                               (row['#Chrom'],row['Pos']),axis=1)\n",
+    "gavin_anno['chr_pos'] = gavin_anno.apply(lambda row:'%s_%s'%\n",
+    "                                               (row['chr'],row['pos']),axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "303801 303786\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'12_102158003',\n",
+       " '12_88456549',\n",
+       " '16_53691526',\n",
+       " '17_59761415',\n",
+       " '17_76993427',\n",
+       " '17_78078910',\n",
+       " '18_29126405',\n",
+       " '19_36591653',\n",
+       " '19_39997886',\n",
+       " '1_243507600',\n",
+       " '22_37466579',\n",
+       " '2_219677447',\n",
+       " '4_178361508',\n",
+       " '8_94777802',\n",
+       " '9_136218995',\n",
+       " '9_97933393'}"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(len(set(cadd_anno['chr_pos'])), len(set(gavin_anno['chr_pos'])))\n",
+    "set(cadd_anno['chr_pos']) - (set(gavin_anno['chr_pos']))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4980"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(set(cadd_anno['chr_pos_ref_alt']).symmetric_difference(set(gavin_anno['chr_pos_ref_alt'])))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "323221 323295\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(set(cadd_anno['chr_pos_ref_alt'])), len(set(gavin_anno['chr_pos_ref_alt'])))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7767"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(set(gavin_anno.gene.unique()).symmetric_difference(set(cadd_anno.GeneID.unique())))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7767"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(set(cadd_anno.GeneID.unique()))+len(set(gavin_anno.gene.unique()))"
    ]
   },
   {
@@ -714,10 +900,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# So indeed one variant may be annotated for several genes by cadd web service"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# annotate the cadd with gavin 'info' column\n"
    ]
   },
   {
