removed the examine_diff file because we no longer do comparision between cadd and gavin here; removed data_exploration because it only explores the cadd annotation res, which can be found in branch_shuang analysing myo5b dataset; modified data_analyse to analyse mhy7 dataset; modified Select_all_myh7_data to select only mhy7 genes

--- a/Select_all_myh7_data.ipynb
+++ b/Select_all_myh7_data.ipynb
@@ -15,10 +15,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# map the myh7_cadd with the chrpos_info_dic\n",
+    "def map_myh7_chrposDic(row):\n",
+    "    if row in chrpos_info_dic:\n",
+    "        return chrpos_info_dic[row]\n",
+    "    else:\n",
+    "        return 'NA'\n",
+    "    \n",
     "def display_column_names(column_names,size = 4):\n",
     "    '''\n",
     "    when there are too many columns\n",
@@ -36,7 +43,7 @@
     "                                         (row['#Chrom'],row['Pos']),axis=1)\n",
     "    gavin_anno['chr_pos'] = gavin_anno.apply(lambda row: '%s_%s'%\n",
     "                                         (row['chr'],row['pos']),axis=1)\n",
-    "    print('Added new columns to both tables')    \n",
+    "    print('Added a chr_pos columns to both cadd_anno and gavin_anno table')    \n",
     "\n",
     "def compare_two_anno_tables(cadd_anno, gavin_anno):\n",
     "    '''\n",
@@ -80,9 +87,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cadd annotation loaded.\n",
+      "Gavin annotation loaded.\n",
+      "Select MYH7 gene from both cadd_anno and gavin_anno tables. \n",
+      "They are with shape: (930, 116) (846, 9)\n",
+      "Added a chr_pos columns to both cadd_anno and gavin_anno table\n",
+      "Discarded variants_gene that could not be found in gavin.\n",
+      "Finally we are left with a MYH7 gene variants info with shape: (850, 118)\n",
+      "The subset of MYH7 data are saved in: data/myh7.tsv\n"
+     ]
+    }
+   ],
    "source": [
     "# load original cadd annotation\n",
     "cadd_file = os.path.join('data','cadd_annotation.tsv')\n",
@@ -93,10 +115,35 @@
     "         'PolyPhenCat':np.object,\n",
     "         'SIFTcat':np.object}\n",
     "cadd_anno = pd.read_csv(cadd_file,sep='\\t',dtype=dtype)\n",
+    "print('Cadd annotation loaded.')\n",
     "\n",
     "# load gavin annotation\n",
     "gavin_file = os.path.join('data','calibrationvariants_r0.4.tsv')\n",
-    "gavin_anno = pd.read_csv(gavin_file,sep='\\t')"
+    "gavin_anno = pd.read_csv(gavin_file,sep='\\t')\n",
+    "print('Gavin annotation loaded.')\n",
+    "\n",
+    "# select the myh7 gene\n",
+    "myh7_cadd = cadd_anno.loc[cadd_anno['GeneName']=='MYH7',:].copy()\n",
+    "myh7_gavin = gavin_anno.loc[gavin_anno['gene']=='MYH7',:].copy()\n",
+    "print('Select MYH7 gene from both cadd_anno and gavin_anno tables. ')\n",
+    "print('They are with shape:',myh7_cadd.shape,myh7_gavin.shape)\n",
+    "\n",
+    "# annotate cadd_anno with group column in gavin_anno\n",
+    "add_new_column_to_cadd_gavin_tables(myh7_cadd,myh7_gavin)\n",
+    "\n",
+    "# a dictionary with gavin group info\n",
+    "chrpos_info_dic = myh7_gavin.set_index('chr_pos')['group'].to_dict()\n",
+    "myh7_cadd['INFO'] = myh7_cadd['chr_pos'].apply(map_myh7_chrposDic)\n",
+    "\n",
+    "# drop variants annotated by cadd, but could not found info in the gavin annotation\n",
+    "all_variants = myh7_cadd.drop(myh7_cadd.index[myh7_cadd.INFO=='NA'],axis=0)\n",
+    "print('Discarded variants_gene that could not be found in gavin.')\n",
+    "print('Finally we are left with a MYH7 gene variants info with shape:',all_variants.shape)\n",
+    "\n",
+    "# save the table\n",
+    "save_path = os.path.join('data','myh7.tsv')\n",
+    "all_variants.to_csv(save_path,sep='\\t',index=False)\n",
+    "print('The subset of MYH7 data are saved in:',save_path)"
    ]
   },
   {
@@ -484,127 +531,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(930, 116) (846, 9)\n"
-     ]
-    }
-   ],
-   "source": [
-    "myh7_cadd = cadd_anno.loc[cadd_anno['GeneName']=='MYH7',:].copy()\n",
-    "myh7_gavin = gavin_anno.loc[gavin_anno['gene']=='MYH7',:].copy()\n",
-    "print(myh7_cadd.shape,myh7_gavin.shape)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Added new columns to both tables\n"
-     ]
-    }
-   ],
-   "source": [
-    "# annotate cadd_anno with group column in gavin_anno\n",
-    "add_new_column_to_cadd_gavin_tables(myh7_cadd,myh7_gavin)\n",
-    "# a dictionary with gavin group info\n",
-    "chrpos_info_dic = myh7_gavin.set_index('chr_pos')['group'].to_dict()\n",
-    "# map the myh7_cadd with the chrpos_info_dic\n",
-    "def map_myh7_chrposDic(row):\n",
-    "    if row in chrpos_info_dic:\n",
-    "        return chrpos_info_dic[row]\n",
-    "    else:\n",
-    "        return 'NA'\n",
-    "myh7_cadd['INFO'] = myh7_cadd['chr_pos'].apply(map_myh7_chrposDic)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(930, 118)"
-      ]
-     },
-     "execution_count": 39,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "myh7_cadd.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [],
-   "source": [
-    "all_variants = myh7_cadd.drop(myh7_cadd.index[myh7_cadd.INFO=='NA'],axis=0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "all_variants.to_csv('data/mhy7.tsv',sep='\\t',index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -673,7 +599,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# need a better way for scoring the data otherwise too slow, probably not in txt format"
+    "# need a better way for storing the data otherwise too slow, probably not in txt format"
    ]
   },
   {
