--- a/full_data_analysis.ipynb
+++ b/full_data_analysis.ipynb
@@ -296,6 +296,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "all_variants['INFO'] = all_variants['INFO'].astype('category')\n",
+    "all_variants['INFO'] = all_variants['INFO'].cat.codes\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for col in all_variants.select_dtypes(exclude=[np.object]).columns:\n",
+    "    null = all_variants[col].isnull().values.sum()\n",
+    "    if null>0:\n",
+    "        all_variants = all_variants.drop([col],axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# one-hot-encoding for categorical data\n",
     "# le = preprocessing.LabelEncoder()\n",
     "# categorical_features = [fea for fea in all_variants.select_dtypes(\n",
@@ -317,7 +339,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dummy_all_var['INFO'] = all_variants['INFO']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for col in all_variants.select_dtypes(exclude=[np.object]).columns:\n",
+    "    null = all_variants[col].isnull().values.sum()\n",
+    "    if null>0:\n",
+    "        print(null,col)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {
     "scrolled": true
    },
@@ -418,7 +468,15 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dataset loaded. (262877, 17122)\n"
+     ]
+    }
+   ],
    "source": [
     "if __name__=='__main__':\n",
     "\n",
@@ -499,6 +557,62 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Start training...\n"
+     ]
+    }
+   ],
+   "source": [
+    "    # ==========================================================\n",
+    "    # Linear model + SGDregressor\n",
+    "    # Parameters\n",
+    "    n_components = np.arange(10,50,10)\n",
+    "    loss = ['squared_loss', 'huber',\n",
+    "            'epsilon_insensitive', \n",
+    "            'squared_epsilon_insensitive']\n",
+    "    penalty = ['l1','l2','elasticnet']\n",
+    "    l1_ratio = [0.15,0.2,0.5,0.8]\n",
+    "    learning_rate = ['constant','optimal','invscaling']\n",
+    "    param_grid_sgd = [{#'pca__n_components':n_components,\n",
+    "                   'sgd__penalty':penalty,\n",
+    "                   'sgd__loss':loss,\n",
+    "                   'sgd__l1_ratio':l1_ratio,\n",
+    "                   'sgd__learning_rate':learning_rate,\n",
+    "                   'sgd__tol':[1e-6],\n",
+    "                   'sgd__warm_start':[True],\n",
+    "                   'sgd__max_iter':[10000],\n",
+    "                   'sgd__eta0':[0.1,0.01,0.5],\n",
+    "                   'sgd__class_weight':['balanced']}]\n",
+    "    # pipeline\n",
+    "    pipeline_sgd = Pipeline(steps=[#('pca',PCA()),\n",
+    "                               ('sgd',SGDClassifier())])\n",
+    "    # save model\n",
+    "    filename = os.path.join('model','pca_logr_new.sav')\n",
+    "    # display results\n",
+    "    classifier_sgd = display_res_gavin_and_best_model(param_grid_sgd,\n",
+    "                                     pipeline_sgd,\n",
+    "                                     full_data)#,\n",
+    "                                     #filename)\n",
+    "    inference(classifier_sgd,full_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -517,7 +631,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
